[gd_scene load_steps=14 format=2]

[ext_resource path="res://menus/maps/swamp.gd" type="Script" id=1]
[ext_resource path="res://menus/maps/mapBackgrounds/map_swamp.png" type="Texture" id=2]
[ext_resource path="res://sprites/tackbankforest/tree1d.png" type="Texture" id=3]
[ext_resource path="res://sprites/tackbankforest/tree1.png" type="Texture" id=4]
[ext_resource path="res://sprites/tackbankforest/tree1b.png" type="Texture" id=5]
[ext_resource path="res://sprites/tackbankforest/tree1c.png" type="Texture" id=6]
[ext_resource path="res://sprites/tackbankforest/tree3.png" type="Texture" id=7]
[ext_resource path="res://sprites/tackbankforest/tree2.png" type="Texture" id=8]
[ext_resource path="res://gui/scroll_light.png" type="Texture" id=9]
[ext_resource path="res://menus/maps/campNode.tscn" type="PackedScene" id=10]
[ext_resource path="res://menus/maps/harvestingNode.tscn" type="PackedScene" id=11]
[ext_resource path="res://menus/buttons/button_back.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 128, 64 )
margin_left = 22.0
margin_right = 22.0
margin_top = 18.0
margin_bottom = 18.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -17.0
margin_top = -22.0
margin_right = 591.0
margin_bottom = 1066.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="rocks and grass" type="Node" parent="." index="1"]

[node name="trees" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="tree11" type="Sprite" parent="trees" index="0"]

visible = false
position = Vector2( 301.846, 739.447 )
texture = ExtResource( 3 )

[node name="tree1" type="Sprite" parent="trees" index="1"]

visible = false
position = Vector2( 110, 10 )
texture = ExtResource( 4 )

[node name="tree8" type="Sprite" parent="trees" index="2"]

visible = false
position = Vector2( 300, 330 )
texture = ExtResource( 5 )

[node name="tree9" type="Sprite" parent="trees" index="3"]

visible = false
position = Vector2( 120, 700 )
texture = ExtResource( 6 )

[node name="tree10" type="Sprite" parent="trees" index="4"]

visible = false
position = Vector2( 40, 720 )
texture = ExtResource( 4 )

[node name="tree2" type="Sprite" parent="trees" index="5"]

visible = false
position = Vector2( 450, 60 )
texture = ExtResource( 7 )

[node name="tree3" type="Sprite" parent="trees" index="6"]

visible = false
position = Vector2( 510, 160 )
texture = ExtResource( 6 )

[node name="tree12" type="Sprite" parent="trees" index="7"]

visible = false
position = Vector2( 460, 210 )
texture = ExtResource( 4 )

[node name="tree13" type="Sprite" parent="trees" index="8"]

visible = false
position = Vector2( 480, 280 )
texture = ExtResource( 5 )

[node name="tree14" type="Sprite" parent="trees" index="9"]

visible = false
position = Vector2( 410, 330 )
texture = ExtResource( 5 )

[node name="tree6" type="Sprite" parent="trees" index="10"]

visible = false
position = Vector2( 30, 120 )
texture = ExtResource( 8 )

[node name="tree4" type="Sprite" parent="trees" index="11"]

visible = false
position = Vector2( 100, 210 )
texture = ExtResource( 5 )

[node name="tree5" type="Sprite" parent="trees" index="12"]

visible = false
position = Vector2( 430, 400 )
texture = ExtResource( 8 )

[node name="tree7" type="Sprite" parent="trees" index="13"]

visible = false
position = Vector2( 10, 400 )
texture = ExtResource( 8 )

[node name="mapName" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.215686, 0.141176, 0.0156863, 1 )
text = "Ynnthool Swamp"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="campNode1" parent="." index="4" instance=ExtResource( 10 )]

margin_left = 81.0
margin_top = 80.0
margin_right = 145.0
margin_bottom = 144.0

[node name="campNode2" parent="." index="5" instance=ExtResource( 10 )]

margin_left = 411.0
margin_top = 61.0
margin_right = 475.0
margin_bottom = 125.0

[node name="campNode3" parent="." index="6" instance=ExtResource( 10 )]

margin_left = 124.0
margin_top = 220.0
margin_right = 188.0
margin_bottom = 284.0

[node name="campNode4" parent="." index="7" instance=ExtResource( 10 )]

margin_left = 347.0
margin_top = 247.0
margin_right = 411.0
margin_bottom = 311.0

[node name="campNode5" parent="." index="8" instance=ExtResource( 10 )]

margin_left = 44.0
margin_top = 422.0
margin_right = 108.0
margin_bottom = 486.0

[node name="campNode6" parent="." index="9" instance=ExtResource( 10 )]

margin_left = 153.0
margin_top = 571.0
margin_right = 217.0
margin_bottom = 635.0

[node name="campNode7" parent="." index="10" instance=ExtResource( 10 )]

margin_left = 340.0
margin_top = 806.0
margin_right = 404.0
margin_bottom = 870.0

[node name="campNode8" parent="." index="11" instance=ExtResource( 10 )]

margin_left = 231.0
margin_top = 848.0
margin_right = 295.0
margin_bottom = 912.0

[node name="harvestingNode1" parent="." index="12" instance=ExtResource( 11 )]

margin_left = 448.0
margin_top = 861.0
margin_right = 512.0
margin_bottom = 925.0

[node name="harvestingNode2" parent="." index="13" instance=ExtResource( 11 )]

margin_left = 47.0
margin_top = 674.0
margin_right = 111.0
margin_bottom = 738.0

[node name="button_back" parent="." index="14" instance=ExtResource( 12 )]

[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]


